--- a/main.ipynb
+++ b/main.ipynb
@@ -4,9 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PulsarPrediction\n",
+    "# Pulsar Prediction\n",
     "\n",
     "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Background\n",
+    "Pulsars are a rare type of Neutron star which look like a “flickering star”. It flickers because it will produce two steady, narrow beams as it spins. They can produce radio emission detectable on Earth.\n",
+    "\n",
+    "The extreme state matter of a pulsar can be used to find planets beyond our solar system, and measure the cosmic distance. Gravitational waves are outcomes from pulsars that could be evidence about energetic cosmic events like enormous black holes’ collision (Cofield, 2016).\n",
+    "\n",
+    "A common method of finding a pulsar is radio telescopes. However, recently machine learning tools are now being used to automatically label pulsar candidates to facilitate rapid analysis.\n",
+    "\n",
+    "### Question\n",
+    "Using the K-nearest neighbors algorithm, to what accuracy can we predict whether an observed star is a pulsar?\n",
+    "\n",
+    "### Dataset\n",
+    "We are working with a Kaggle dataset which describes attributes about stars, along with labels of being pulsar stars or not. Since the testing dataset is not labelled, we are unable to use it for testing.\n"
    ]
   },
   {
@@ -20,9 +38,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“package ‘ggplot2’ was built under R version 4.0.1”\n",
+      "Warning message:\n",
+      "“package ‘tibble’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘tidyr’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘dplyr’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘tidymodels’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘broom’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘dials’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘infer’ was built under R version 4.0.3”\n",
+      "Warning message:\n",
+      "“package ‘modeldata’ was built under R version 4.0.1”\n",
+      "Warning message:\n",
+      "“package ‘parsnip’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘recipes’ was built under R version 4.0.1”\n",
+      "Warning message:\n",
+      "“package ‘tune’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘workflows’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘yardstick’ was built under R version 4.0.2”\n"
+     ]
+    }
+   ],
    "source": [
     "suppressMessages(library(tidyverse))\n",
     "suppressMessages(library(repr))\n",
@@ -35,7 +88,7 @@
    "metadata": {},
    "source": [
     "### Reading data\n",
-    "Data was downloaded from kaggle.com as CSV files. \n",
+    "Data was downloaded as CSV files. \n",
     "Kaggle provided training and testing data. It should be noted that Kaggle testing\n",
     "data is unlabelled, so model evaluation must be done with some proportion of training\n",
     "data."
@@ -43,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +120,7 @@
     }
    ],
    "source": [
-    "pulsar_training = read_csv(\"pulsar_data_train.csv\",col_types = cols())\n",
+    "pulsar_training = read_csv(\"https://raw.githubusercontent.com/FrankWhoee/pulsar/master/pulsar_data_train.csv\",col_types = cols())\n",
     "\n",
     "print(paste(\"pulsar_training has\", nrow(pulsar_training), \"observations,\"))\n",
     "print(paste(ncol(pulsar_training), \"variables, and\"))\n",
@@ -158,8 +211,7 @@
    "source": [
     "### Data summary and visualization\n",
     "\n",
-    "The goal of this summary will both be to get a general feel for the data, but more importantly to serve as guidance for feature selection, so we will be\n",
-    "splitting the data into positive and negative cases for a more accurate depiction of the data, since there are approximately 10 times more negative cases, which will heavily influence the overall summary and visualization.\n"
+    "We will split the data into positive and negative cases for a more accurate depiction, since there are approximately 10 times more negative cases.\n"
    ]
   },
   {
@@ -250,7 +302,7 @@
    "source": [
     "#### Negative plots\n",
     "\n",
-    "Because of just how much negative data there is, the overall plot looks essentially identical to the plot with only negative cases."
+    "Due to the proportion of negative data, the overall plot and negative-only plot visualizations look identical."
    ]
   },
   {
@@ -284,7 +336,7 @@
    "source": [
     "#### Positive plots\n",
     "\n",
-    "The positive plots are dramatically different from both the overall and negative plots. The most different ones are Ekotip, Motip, and SdotDc on account of their different skews and variances."
+    "The positive plots are dramatically different, however. Most notable are Ekotip, Motip, and SdotDc on account of their different skews and variances."
    ]
   },
   {
@@ -316,9 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Comparison of statistical attributes\n",
-    "\n",
-    "Here we will compare and contrast the mean, median, and standard deviation of each attribute of both classes."
+    "#### Comparison of statistical attributes"
    ]
   },
   {
@@ -473,7 +523,7 @@
     "## Method\n",
     "\n",
     "### Feature Selection\n",
-    "To choose which features will be selected, w are using an anova test"
+    "To choose which features will be selected, we are using ANOVA (Mumtaz, 2020)."
    ]
   },
   {
@@ -617,6 +667,44 @@
     "summary(aov(t ~ Motip + Ekotip + Sotip + SdotDc, data=pulsar_training))\n",
     "summary(aov(t ~ Motip + Ekotip + Sotip + MotDc + SdotDc + SotDc, data=pulsar_training))\n",
     "summary(aov(t ~ ., data=pulsar_training))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Analysis\n",
+    "\n",
+    "First, we will create a recipe to preprocess our data.\n",
+    "\n",
+    "As our dataset is very imbalanced, we want to rebalance the data in a way that can eliminate a falsely high accuracy rate for our model. We will do this by oversampling the positive cases.\n",
+    "\n",
+    "We will use the K-nearest neighbors algorithm to classify our observations, and execute 5-fold cross-validation to find the optimal value of K to use.\n",
+    "\n",
+    "Finally, we will fit the model and collect metrics on model performance, noting the accuracy we were able to obtain for our model.\n",
+    "\n",
+    "One of the ways in which we plan on visualizing our findings is with a scatterplot, where each data point depicts one star. Whether each star is a pulsar star or not will be denoted by colour.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Outcomes\n",
+    "\n",
+    "We expect to discover which variables are most influential in the categorization of pulsar stars."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Works Cited\n",
+    "Cofield, Calla. (2016, April 21). What Are Pulsars?. SPACE.COM. \n",
+    " https://www.space.com/32661-pulsars.html\n",
+    "\n",
+    "Mumtaz, Asad. (2020, Jul 16). How to Find the Best Predictors for ML Algorithms. TOWARDSDATASCIENCE.COM. \n",
+    " https://towardsdatascience.com/how-to-find-the-best-predictors-for-ml-algorithms-4b28a71a8a80"
    ]
   },
   {
