Add set seed for build model

--- a/main.ipynb
+++ b/main.ipynb
@@ -919,6 +919,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "set.seed(2021)\n",
     "# your code here\n",
     "final_spec = nearest_neighbor(weight_func = \"rectangular\", neighbors = chosen_k) %>%\n",
     "       set_engine(\"kknn\") %>%\n",
